# macroproject_4sem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  params.json
config/: grid.json  params.json
include/: Mesh.h  Params.h  Physics.h  Point.h  Simulation.h  Utility.h
src/: Main.cpp  Mesh.cpp  Params.cpp  Point.cpp  Simulation.cpp  Utility.cpp
